@@ -1,3 +1,19 @@
+ apply plugin: 'war'
+   
+  if(enable_gretty.equals("true"))
+  {
+  
+     apply plugin: 'org.akhikhl.gretty'
+  
+     gretty {
+	    httpPort = 80
+	   
+	    contextPath = '/bboss-websocket'
+	    jvmArgs = ['-Xmx1024M', '-XX:PermSize=128M', '-XX:MaxPermSize=256M']
+	  //  servletContainer = 'jetty7'
+	  
+	  }
+  } 
 sourceSets {
     main {
         java {
@@ -6,7 +22,7 @@ sourceSets {
         resources {
 
         }
-        compileClasspath = configurations.providedCompile +configurations.compile
+        //compileClasspath = configurations.providedCompile +configurations.compile
     }
 }
 
@@ -15,21 +31,32 @@ jar {
     classifier = "all"
 }*/
 
-project.tasks.compileJava.dependsOn(project(':bboss-taglib').tasks.publish)
+project.tasks.compileJava.dependsOn(project(':bboss-mvc').tasks.install)
 dependencies {
    
-    providedCompile "org.apache.tomcat:tomcat-catalina:8.0.33"
-    providedCompile "org.apache.tomcat:tomcat-coyote:8.0.33" 
-    providedCompile "org.apache.tomcat:tomcat-websocket:8.0.33"
-    providedCompile "servletapi:servletapi:2.4"
-    providedCompile  "javax.servlet:jsp-api:2.0" 
-   providedCompile  "javaee:javaee-api:5" 
+
+   
     compile  (
 			
-           [group: 'com.bbossgroups', name: 'bboss-mvc', version: "${version}", transitive: true],
-            [group: 'org.glassfish.tyrus.bundles', name: 'tyrus-standalone-client', version: "1.9", transitive: true],
-            //project(':bboss-mvc')
+           [group: 'cglib', name: 'cglib-nodep', version: '3.1', transitive: false],
+             [group: 'org.ow2.asm', name: 'asm', version: '5.0.3', transitive: false],
+           [group: 'com.bbossgroups', name: 'bboss-mvc', version: "${version}", transitive: false],
+             [group: 'com.bbossgroups', name: 'bboss-persistent', version: "${version}", transitive: false],
+           [group: 'com.bbossgroups', name: 'bboss-core', version: "${version}", transitive: false],
+           [group: 'com.bbossgroups', name: 'bboss-util', version: "${version}", transitive: false],
+           //[group: 'com.bbossgroups.security', name: 'bboss-security', version: "${version}", transitive: false],
+           [group: 'com.bbossgroups', name: 'bboss-taglib', version: "${version}", transitive: false],
+           [group: 'log4j', name: 'log4j', version: '1.2.16', transitive: false],          
+            [group: 'oro', name: 'oro', version: '2.0.8', transitive: false],         
+            [group: 'commons-logging', name: 'commons-logging', version: '1.1', transitive: false],
+            
     )
+    providedCompile (
+    	[group: 'javax.servlet', name: 'javax.servlet-api', version: "3.0.1", transitive: false],
+    	[group: 'org.glassfish.tyrus.bundles', name: 'tyrus-standalone-client', version: "1.9", transitive: false]
+    )
+   
+    
      
 }
     
@@ -39,7 +66,7 @@ war {
     from 'WebRoot'
     // adds a file-set to the root of the archive
     webInf { from 'WebRoot/WEB-INF' } // adds a file-set to the WEB-INF dir.
-    classpath configurations.compile // adds a configuration to the WEB-INF/lib dir.
+    classpath configurations.compile-configurations.providedCompile // adds a configuration to the WEB-INF/lib dir.
     webXml = file('WebRoot/WEB-INF/web.xml') // copies a file to WEB-INF/web.xml
 }
 
